<resources>
    <string name="app_name">CaseStudy</string>
    <string name="tanitim1">Create unlimited recipes with\nthe ingredients you have</string>
    <string name="tanitim2">Earn points for every recipe you\ncreate, send, and share</string>
    <string name="tanitim3">Convert the points you earn\ninto real opportunities</string>
    <string name="tanitim4">Earn more points by placing\nin the top three spots in leagues</string>
    <string name="tanitim5">Lets Start!</string>
    <string name="buton">Continue</string>
    <string name="uyeol">Sign Up</string>
    <string name="giris">Log In</string>
    <string name="email">Email</string>
    <string name="sifre">Password</string>
    <string name="butonGir">Log In</string>
    <string name="googleGir">Log in with Google</string>
    <string name="yada">or</string>
    <string name="kosul1">I accept the Terms of Use and Personal\nData Protection Policy</string>
    <string name="kosul2">I want to subscribe to the e-bulletin\nto learn different recipes every day.</string>
    <string name="cuzdanim">Wallet</string>
    <string name="found">12,212 Recipes Found</string>
    <string name="filtrele">Filter</string>
    <string name="yeni">New</string>
    <string name="popular">Popular</string>
    <string name="allrecipe">All Recipes</string>
    <string name="arkadasedin">Make Kitchen Friends</string>
    <string name="follow">Follow</string>
    <string name="porsiyonsayisi">Number of Servings</string>
    <string name="hazirlanma">Preparation Time</string>
    <string name="minutes">35 Minutes</string>
    <string name="kisi">2-3 People</string>
    <string name="besindegeri">To see nutritional values</string>
    <string name="tiklayiniz">Click here</string>
    <string name="malzemeler">Materials</string>
    <string name="yappaylas">Make and Share the Meal</string>
    <string name="yorumlar">Comments(3)</string>
    <string name="tumunugor">See All</string>
    <string name="belirt">Give Your Opinion Too</string>
    <string name="denediler">Those Who Made the Recipe Also Tried These</string>
    <string name="tarif">Recipe</string>
    <string name="takipci">Follower</string>
    <string name="takipedilen">Followed</string>
    <string name="profilduzenle">Edit Profile</string>
    <string name="bestakipci">5 Follower</string>
    <string name="yeditakip">7 Followed</string>
    <string name="yemegiyap">Make Dinner</string>
    <string name="fotoekle">Add Photo</string>
    <string name="paylas">Share</string>
    <string name="yaptim">I Made Dinner!</string>
    <string name="gecensure">Elapsed Time: 01.23</string>
    <string name="geriDon">Turn Back</string>
    <string name="puanla">By Score</string>
    <string name="degerlendirme">Write Your Review</string>
    <string name="arsiv">Archive</string>
    <string name="tarifleri">Recipes</string>
    <string name="vitrin">Showcase</string>
    <string name="kupa">Apple League Cup</string>
    <string name="madalya">Orange League Second Place</string>
    <string name="bildirimler">Notifications</string>
    <string name="yemeklerim">My Meals</string>
    <string name="yaptigim">My Meals</string>
    <string name="urettigim">I Produce</string>
    <string name="gonderdigim">I Sent</string>
    <string name="tebrikler">Congratulations</string>
    <string name="kazandiniz">You earned +50LP by sharing the meal</string>
    <string name="kapat">Close</string>
</resources>
